--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "3.0.0",
   "description": "A sample voice app that works with the Jovo Framework",
   "main": "src/index.js",
+  "config": {
+    "puppeteer_skip_chromium_download": true
+  },
   "dependencies": {
+    "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
+    "chrome-aws-lambda": "^5.5.0",
     "jovo-db-filedb": "^3.0.14",
     "jovo-framework": "^3.3.0",
     "jovo-platform-alexa": "^3.0.15",
     "jovo-platform-googleassistant": "^3.0.15",
     "jovo-plugin-debugger": "^3.0.14",
-    "puppeteer": "^5.5.0"
+    "md5": "^2.3.0",
+    "puppeteer": "^5.5.0",
+    "puppeteer-lambda": "^1.1.3"
   },
   "devDependencies": {
     "gulp": "^4.0.2",
